--- a/src/main/webapp/stylesheets/style.css
+++ b/src/main/webapp/stylesheets/style.css
@@ -22,6 +22,11 @@ textarea {
 	height: 20rem;
 }
 
-.card-title-height{
+.card-title-height {
 	max-height: 5rem;
+}
+
+.home-img {
+	height: 15rem;
+	width: fit-content;
 }
